# codex-observatory

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  postinstall.cjs  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CODEX_INTEGRATION.md  INSTALL.md  USAGE.md
integrations/codex-skill/: SKILL.md
lib/: history.cjs  native.cjs  platform.cjs  postinstall.cjs
npm/lib/: native.cjs  platform.cjs
npm/scripts/: postinstall.cjs
npm/tests/: history.test.cjs  native.test.cjs  platform.test.cjs  postinstall.test.cjs
scripts/: install-codex.ps1  install-codex.sh  postinstall.cjs  uninstall-codex.ps1  uninstall-codex.sh
src/codex_observatory/: __main__.py  cli.py  codex_integration.py
tests/: test_cli.py  test_integration.py
